src/objects/Order__c.object
<CustomObject>
    <description>Order information for TRC</description>
    <fields>
        <fullName>Bill_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Bill To)</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_Line_1__c</fullName>
        <formula>Bill_To_Address__r.Address_Line_1__c</formula>
        <label>Bill To Address Line 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Address ID</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Orders (Bill To)</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_City__c</fullName>
        <formula>Bill_To_Address__r.City__c</formula>
        <label>Bill To City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Country__c</fullName>
        <formula>Text(Bill_To_Address__r.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_State_Province__c</fullName>
        <formula>Text(Bill_To_Address__r.State_Province__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to disable triggers or validation rules firing.
Note: For bulk loading data from a script, the trigger assumes all records in the list have this field set to true.</description>
        <inlineHelpText>Field used to disable triggers or validation rules firing.
Note: For bulk loading data from a script, the trigger assumes all records in the list have this field set to true.</inlineHelpText>
        <label>Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_PO_Number__c</fullName>
        <label>Customer PO Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daikin_Tools_Job_Number__c</fullName>
        <label>Daikin Tools Job Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <inlineHelpText>1 = Order History
2 = Order Prod (McQuay Sales)</inlineHelpText>
        <label>Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Dealer)</relationshipLabel>
        <relationshipName>Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distributor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Distributor)</relationshipLabel>
        <relationshipName>Orders3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GO_Number__c</fullName>
        <label>GO Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Contractor_Address_Line_1__c</fullName>
        <label>General Contractor Address Line 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Contractor_Address_Line_2__c</fullName>
        <label>General Contractor Address Line 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Contractor_City__c</fullName>
        <label>General Contractor City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Contractor_Contact__c</fullName>
        <label>General Contractor Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Contractor_Name__c</fullName>
        <label>General Contractor Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Contractor_Phone__c</fullName>
        <label>General Contractor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>General_Contractor_Postal_Code__c</fullName>
        <label>General Contractor Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Contractor_State_Province__c</fullName>
        <label>General Contractor State/Province</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Address_Line_1new__c</fullName>
        <description>NEW field for population from modified ETL process</description>
        <label>Job Address Line 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Address_Line_2new__c</fullName>
        <description>NEW field for population from modified ETL process</description>
        <label>Job Address Line 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Alternate_Name__c</fullName>
        <label>Job Alternate Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_City_new__c</fullName>
        <description>NEW field for population from modified ETL process</description>
        <label>Job City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Country_new__c</fullName>
        <description>NEW field for population from modified ETL process</description>
        <label>Job Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <label>Job Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_State_Province_new__c</fullName>
        <description>NEW field for population from modified ETL process</description>
        <label>Job State Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Zip_Postal_Code_new__c</fullName>
        <description>NEW field for population from modified ETL process</description>
        <label>Job Zip/Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OH_Header_Key__c</fullName>
        <label>OH Header Key</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Entry_Date__c</fullName>
        <label>Order Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Type_ID__c</fullName>
        <inlineHelpText>Domestic
International</inlineHelpText>
        <label>Order Type ID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Address_Line_1__c</fullName>
        <label>Owner Address Line 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Address_Line_2__c</fullName>
        <label>Owner Address Line 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_City__c</fullName>
        <label>Owner City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Contact__c</fullName>
        <label>Owner Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <label>Owner Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Phone__c</fullName>
        <label>Owner Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner_Postal_Code__c</fullName>
        <label>Owner Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_State_Province__c</fullName>
        <label>Owner State/Province</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_PO_Number__c</fullName>
        <label>Rep PO Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Number__c</fullName>
        <label>SO Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesperson</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders_Salesperson</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesperson_temp__c</fullName>
        <inlineHelpText>Temp field for src_dw_fact_shipment.DCW_Sales_Rep_Number so we can go back and generate a lookup to the Contact record once the DCW data is imported.</inlineHelpText>
        <label>Salesperson (temp)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selling_Rep_Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selling Rep Office</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Selling Rep Office)</relationshipLabel>
        <relationshipName>Orders_SellingRep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selling_Rep_Office_temp__c</fullName>
        <inlineHelpText>Temporary field for src_dw_fact_shipment.DCW_Sales_Office_Number so we can go back and generate the lookup to an Account after the DCW data is imported.</inlineHelpText>
        <label>Selling Rep Office (temp)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Ship To)</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Orders (Ship To)</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vertical_Market__c</fullName>
        <label>Vertical Market</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>src_dw_order_info.dw_Order_Info_Key</inlineHelpText>
        <label>Warehouse ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>What Warranty Case is related to this order?</inlineHelpText>
        <label>Warranty Case</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.RecordTypeId</field>
                <operation>equals</operation>
                <value>Warranty Claim Authorization</value>
            </filterItems>
            <infoMessage>Enter the Warranty Header Case Number</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wholesaler_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesaler Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Wholesaler)</relationshipLabel>
        <relationshipName>Orders4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>oh_orig_system_header_id__c</fullName>
        <label>OH Orig System Header Key</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Data_Source__c</columns>
        <columns>SO_Number__c</columns>
        <columns>GO_Number__c</columns>
        <columns>Rep_PO_Number__c</columns>
        <columns>Customer_PO_Number__c</columns>
        <columns>Job_Name__c</columns>
        <columns>Bill_To_Account__c</columns>
        <columns>Bill_To_Address__c</columns>
        <columns>Ship_To_Account__c</columns>
        <columns>Ship_To_Address__c</columns>
        <columns>Owner_Name__c</columns>
        <columns>General_Contractor_Name__c</columns>
        <columns>Order_Entry_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MQ_Sales_Orders</fullName>
        <columns>NAME</columns>
        <columns>Order_Entry_Date__c</columns>
        <columns>SO_Number__c</columns>
        <columns>GO_Number__c</columns>
        <columns>Rep_PO_Number__c</columns>
        <columns>Customer_PO_Number__c</columns>
        <columns>Daikin_Tools_Job_Number__c</columns>
        <columns>Job_Name__c</columns>
        <columns>Bill_To_Account__c</columns>
        <columns>Bill_To_Address__c</columns>
        <columns>Owner_Name__c</columns>
        <columns>General_Contractor_Name__c</columns>
        <columns>Data_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SO_Number__c</field>
            <operation>notContain</operation>
            <value>MOFI</value>
        </filters>
        <filters>
            <field>Data_Source__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>McQuay Sales Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NonMOFI_Orders</fullName>
        <columns>NAME</columns>
        <columns>Order_Entry_Date__c</columns>
        <columns>SO_Number__c</columns>
        <columns>GO_Number__c</columns>
        <columns>Rep_PO_Number__c</columns>
        <columns>Customer_PO_Number__c</columns>
        <columns>Job_Name__c</columns>
        <columns>Bill_To_Account__c</columns>
        <columns>Bill_To_Address__c</columns>
        <columns>Owner_Name__c</columns>
        <columns>General_Contractor_Name__c</columns>
        <columns>Data_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SO_Number__c</field>
            <operation>notContain</operation>
            <value>MOFI</value>
        </filters>
        <label>Non-MOFI Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>OH_Sales_Orders</fullName>
        <columns>NAME</columns>
        <columns>Order_Entry_Date__c</columns>
        <columns>SO_Number__c</columns>
        <columns>GO_Number__c</columns>
        <columns>Rep_PO_Number__c</columns>
        <columns>Customer_PO_Number__c</columns>
        <columns>Daikin_Tools_Job_Number__c</columns>
        <columns>Job_Name__c</columns>
        <columns>Bill_To_Account__c</columns>
        <columns>Bill_To_Address__c</columns>
        <columns>Owner_Name__c</columns>
        <columns>General_Contractor_Name__c</columns>
        <columns>Data_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SO_Number__c</field>
            <operation>notContain</operation>
            <value>MOFI</value>
        </filters>
        <filters>
            <field>Data_Source__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Order History Sales Orders</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Order ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>